--- a/catalog/view/theme/d_visualize/template/component/d_address_field/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_address_field/default.twig
@@ -95,7 +95,7 @@
             select_values_val:'country_id',
             select_values_check: country_id,
             select_values_name: 'name',
-            placeholder:entry_country ,
+            placeholder:text_select ,
         }
     }
 } %}
