--- a/catalog/view/theme/d_visualize/template/component/d_custom_field/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_custom_field/default.twig
@@ -1,5 +1,6 @@
 <!-- > d_custom_field -->
 {% if type == 'select' %}
+    {#todo fix this #}
     {% include component.form_group.template with{
         form_group:{
             id:guest_custom_field ? 'payment-':'' ~ 'custom-field'~ custom_field_id,
