--- a/catalog/view/theme/d_visualize/template/component/form_group/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/form_group/default.twig
@@ -1,9 +1,10 @@
 {% set form_group_class = 'form-group vz-form-group vz-form-group--' ~  form_group.type|default('text') %}
 {% set form_group_label_class = 'control-label vz-control-label vz-control-label--' ~  form_group.type %}
 {% set form_group_div_class = 'vz-form-group__inputs' %}
-{% if component.form_group.setting.js_error is defined %}
+{% if component.form_group.setting.js_error %}
     {% set form_group = form_group|merge({error:false}) %}
 {% endif %}
+
 {% if form_group.classes %}
     {% set form_group_class = form_group_class ~ ' ' ~ form_group.classes %}
 {% endif %}
@@ -16,7 +17,6 @@
 {% if component.form_group.setting.form is defined %}
     {% set form = component.form_group.setting.form.value %}
 {% endif %}
-
 {% if form == 'inline' %}
     {% set form_group_class = form_group_class ~ ' row' %}
     {% set form_group_label_class = form_group_label_class ~ ' col-sm-2' %}
