fix bugs in list #5

--- a/catalog/view/theme/d_visualize/template/account/address_form.twig
+++ b/catalog/view/theme/d_visualize/template/account/address_form.twig
@@ -19,7 +19,7 @@
                     input:{
                         type:'radio',
                         name:'default',
-                        value: default,
+                        value: 'value',
                         checked: default,
                         text_input:entry_default ,
                         values: [{ 'value':1,'text': text_yes},{'value':0,'text':text_no}],
