--- a/catalog/view/theme/d_visualize/template/checkout/login.twig
+++ b/catalog/view/theme/d_visualize/template/checkout/login.twig
@@ -7,6 +7,7 @@
               label_text:text_checkout,
               input:{
                   type:'radio',
+                  form:'block',
                   name:'account',
                   text: 'name',
                   checked: account,
