--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/opencart.scss
@@ -95,8 +95,8 @@ div.required .control-label:before {
 
 /* Gradent to all drop down menus */
 .dropdown-menu {
-  >li{
-    >a:hover, button:hover {
+  li{
+    >a:hover, >button:hover {
       text-decoration: none;
       color: $color-text-primary;
       background-color: $color-primary;
